src/test/ui/iterators/collect-into-array.stderr
error[E0277]: an array of type `[u32; 10]` cannot be built directly from an iterator
  --> $DIR/collect-into-array.rs:3:31
   |
LL |     let whatever: [u32; 10] = (0..10).collect();
   |                               ^^^^^^^ ------- required by a bound introduced by this call
   |                               |
   |                               try collecting into a `Vec<{integer}>`, then using `.try_into()`
   |
   = help: the trait `FromIterator<{integer}>` is not implemented for `[u32; 10]`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |     fn collect<B: FromIterator<Self::Item>>(self) -> B
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `collect`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
